--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ Add your introduction to your step-by-step-guide, including a title, time requir
             <h1>Constructing your Article...</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 30 minutes<br>
-              <b>Awesome rating:</b> 10% awesome</p>
+            <p><b>Writing Time:</b> 30 minutes<br>
+              <b>Format:</b> AP STYLE</p>
             <hr>
 
             <p>Start by organizing all of your ideas and information. Then spend some time writing a catchy, thoughtful, and accurate article. Finally, give it a good edit so that it looks complete and professional</p>
