--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Writing a Draft</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <p>Start with 1-2 punchy sentences. Keep your paragraphs short, and include a hook/tease to draw your reader in.</p>
 
               <!--
 This block contains a photo and has a caption.
@@ -133,7 +133,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <p class="caption">Stick to a word limit to avoid rambling</p>
             </div>
           </li>
 
