--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Edit out unnecessary information</h3>
+              <p>Look for any repetition, filler, and words that lack clarity/specifics.</p> 
             </div>
           </li>
 
