--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Check for the 3 Key Article Elements</h3>
+              <p>Review your Introduction, Body, and Conclusion</p> 
             </div>
           </li>
 
