--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h3>Check for the 3 Key Article Elements</h3>
-              <p>Review your Introduction, Body, and Conclusion</p> 
+              <p>Review your Introduction, Body, and Conclusion.</p> 
             </div>
           </li>
 
