--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Create-a-Good-Article"How to Create a Good Article>WikiHow</a>.</p>
-      <p>Images are by <a href="https://flic.kr/p/b83qAz" title=typewriter by Jenny Stone from Flickr</a></p>
+      <p>Images are by <a href="https://flic.kr/p/b83qAz" title="typewriter by Jenny Stone from Flickr">/a></p>
     </footer>
 
     <!--
