--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ with a paragraph to create a photo with a caption.
               <p>Ask a peer to read your draft, double-check for spelling errors, and make any necessary edits.</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/QTId9RFPKuQ?si=aep8AfltfMmObVAg" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
