--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#4795a3;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#625347;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
