--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3>Finding a Topic and Gathering Information</h3>
-              <p>Make a list of ideas, research the topic, and find reliable sources.</p> 
+              <p>Make a list of ideas, research the topic, and find reliable sources. Do some free-thinking. Just jot down any thoughts that come to mind. You can weed out the bad ideas later!</p> 
             </div>
           </li>
 
