--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
+      <img src="https://imgur.com/SXHgDlE"><img src="https://i.imgur.com/SXHgDlE.png" width="100" align="right" height="100" alt="KH_monogram">            
       <h1>Daniel Gallo WikiHow How to Create a Good Article</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
